--- a/html/crow.css
+++ b/html/crow.css
@@ -1,5 +1,6 @@
 #idGraphSpace {
 	margin: auto;
+	--z-index: -50;
 }
 #flying {
 	position: absolute;
@@ -8,7 +9,7 @@
 	bottom: 0;
 	right: 0;
 	background-color: #111;
-	z-index: -10;
+	z-index: 10;
 }
 #moon {
 	margin: auto;
@@ -21,12 +22,14 @@
 	width: 220px;
 	height: 220px;
 	border-radius: 110px;
-	z-index: -5;
+	z-index: 5;
 }
 #flying img {
-	margin: auto;
+	position: fixed;
+	left: 50%;
+	transform: translateX(-50%);
 	display: block;
-	z-index: 10 !important;
+	z-index: 15 !important;
 	max-width: 220px;
 	max-height: 220px;
 }
@@ -37,6 +40,7 @@
 	top: 90px;
 	left: 50%;
 	transform: scaleY(-1) translateX(-50%);
+	z-index: 10 !important;
 }
 p.credit a {
 	color: #ccf;
@@ -70,4 +74,44 @@ p.credit a {
 	font-size: 200%;
 	line-height: 100%;
 	padding: 0;
+}
+
+body {
+	---font-family: "HelveticaNeueBlack", "HelveticaNeue-Black", "Helvetica Neue Black", "HelveticaNeueHeavy", "HelveticaNeue-Heavy", "Helvetica Neue Heavy", "HelveticaNeueBold", "HelveticaNeue-Bold", "Helvetica Neue Bold", "HelveticaNeue", "Helvetica Neue", 'TeXGyreHerosBold', "Arial Black", sans-serif;
+	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "HelveticaNeue", "Helvetica Neue", sans-serif;
+	color: #444;
+	overflow: hidden;
+}
+a {
+	color: #44c;
+}
+.hidden {
+	display: none;
+}
+div.control label {
+	display: block;
+}
+div.control {
+	float: left;
+	width: 15%;
+	padding: 0 2em;
+}
+div.control.x2wide {
+	width: 30%;
+}
+div.control.x3wide {
+	width: 45%;
+}
+#controls {
+	background-color: #ccc;
+	padding: 0.75em 1em;
+	padding-bottom: 1em;
+	border-radius: 0.5em;
+	--z-index: -50;
+}
+.clear {
+	clear: both;
+}
+#controls .optional {
+	padding-top: 0.75em;
 }
